Fixed slider for related products on mobile screen

--- a/assets/sass/components/_swiper.scss
+++ b/assets/sass/components/_swiper.scss
@@ -61,7 +61,8 @@ section.related ul.products {
 	}
 
 	.swiper-wrapper {
-		@apply gap-4
+		@apply gap-4;
+		width: 80vw;
 	}
 
 	.swiper-slide img {
@@ -71,4 +72,3 @@ section.related ul.products {
 		object-fit: cover;
 	}
 }
-
